feat(nginx): 更新 Nginx 配置文件

--- a/docker-compose/web/nginx/conf/dk_nginx.conf
+++ b/docker-compose/web/nginx/conf/dk_nginx.conf
@@ -69,21 +69,23 @@ http {
         fastcgi_param   HTTP_SCHEME         https;
 
 		location / {
-			root   /etc/nginx/html/dist/;
+			root   /etc/nginx/html/admin/dist;
 			index  index.html index.htm;
-			try_files $uri $uri/ /index.html;
 		}
 
         location /sdk {
-               root   /etc/nginx/;
-               autoindex on;
+           root   /etc/nginx/;
+           autoindex on;
         }
 
-                 
-        location /toolbar {
-			alias /etc/nginx/html/toolbar/dist/;
-            index  index.html index.htm;
+        location /second_site {
+            alias html/whiten/dist/;
+            index index.html index.htm;
+        }
 
+        location /toolbar {
+			alias html/toolbar/dist/;
+            index  index.html index.htm;
 		}
 		
 		location /admin {
