--- a/docker-compose/nacos/docker-compose-nacos.yml
+++ b/docker-compose/nacos/docker-compose-nacos.yml
@@ -7,33 +7,49 @@
 ## host.docker.internal – 这解析为外部主机。
 ## 
 version: "3.0"
+
+# 网桥 -> 方便相互通讯
+networks:
+  nacos:
+    driver: bridge
+
 services:
   ##
   ## nacos 配置
   ## 启动成功后页面：http://localhost:8848/nacos nacos/nacos
   ##
   nacos:
-    build:
-        context: ./
-        dockerfile: Dockerfile
-    restart: always     # 开机自动重启
-    image: nacos     # 镜像名称
+    restart: unless-stopped                       # 重启策略
+    image: moese/nacos-server-m1:2.2.2            # 这是适配mac的，原镜像：nacos/nacos-server:v2.2.2
     container_name: nacos
     environment:
-        - MODE=standalone
-#         - MODE=cluster # 集群模式
-#         - PREFER_HOST_MODE=ip
-#         - NACOS_SERVER_IP=192.168.1.102
-#         - NACOS_SERVERS=192.168.1.102:8848 192.168.1.176:8848 # IP1,IP2是对应的服务器外网,PORT1,PORT2是对应的nacos服务端口
-#         - JVM_XMS=128m
-#         - JVM_XMX=128m
-#         - JVM_XMN=128m
-    ports:     # 端口号绑定（宿主机:容器内）
-      - '8848:8848'
-      - '9848:9848'
+      - PREFER_HOST_MODE=hostname                 # 如果支持主机名可以使用hostname,否则使用ip，默认也是ip
+      - MODE=standalone                           # 单机模式启动
+      - SPRING_DATASOURCE_PLATFORM=mysql          # 数据源平台 仅支持mysql或不保存empty
+      # TODO 修改mysql连接信息
+      - MYSQL_SERVICE_HOST=host.docker.internal   # 注：这里不能为`127.0.0.1`或`localhost`方式！！！
+      # mysql5.7 连接参数
+      # - MYSQL_SERVICE_DB_PARAM=characterEncoding=utf8&connectTimeout=1000&socketTimeout=3000&autoReconnect=true&useSSL=false
+      # mysql8 连接参数
+      - MYSQL_SERVICE_DB_PARAM=characterEncoding=utf8&connectTimeout=1000&socketTimeout=3000&autoReconnect=true&useUnicode=true&useSSL=false&serverTimezone=Asia/Shanghai
+      - MYSQL_SERVICE_PORT=3306
+      - MYSQL_SERVICE_DB_NAME=nacos_config        # 数据库，先导入所需sql脚本
+      - MYSQL_SERVICE_USER=root
+      - MYSQL_SERVICE_PASSWORD=12345678
+      - JVM_XMS=128m                              # -Xms default :2g
+      - JVM_XMX=128m                              # -Xmx default :2g
+      - JVM_XMN=64m                               # -Xmn default :1g
+      - JVM_MS=32m                                # -XX:MetaspaceSize    default :128m
+      - JVM_MMS=32m                               # -XX:MaxMetaspaceSize default :320m
+      - NACOS_DEBUG=n                             # 是否开启远程debug，y/n，默认n
+      - TOMCAT_ACCESSLOG_ENABLED=false            # 是否开始tomcat访问日志的记录，默认false
+    ports:                                        # 端口号绑定（宿主机:容器内）
+      - "8848:8848"
+      - "9848:9848"
+      - "9849:9849"
+      - "9555:9555"
     volumes:
       - ./conf/application.properties:/home/nacos/conf/application.properties
       - /var/data/nacos/log:/home/nacos/logs
-networks:
-  rocketmq:
-    driver: bridge
+    networks:
+      - nacos
